--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,6 +1,6 @@
 {
   "development":{
     "PORT": 3000,
-    "MONGODB_URI": "mongodb://localhost:27017/TodoApp"
+    "MONGODB_URI": "mongodb://mongo:27017/TodoApp"
   }
 }
