--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,18 +1,17 @@
-version: '3'
+version: '3.8'
 
 services:
-
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-    - ./frontend:/myapp
-    - /myapp/node_modules
+      - ./frontend:/myapp
+      - /myapp/node_modules
     ports:
-    - 80:3000
+      - 80:3000
     depends_on:
-    - backend
+      - backend
     restart: always
 
   backend:
@@ -20,19 +19,20 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     volumes:
-    - ./backend:/myapp
-    - /myapp/node_modules
-    expose:
-    - 3000
+      - ./backend:/myapp
+      - /myapp/node_modules
+    ports:
+      - 3000:3000         
     depends_on:
-    - mongo
+      - mongo
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017/TodoApp
     restart: always
   
   mongo:
     image: mongo:latest
-    expose:
-    - 27017
+    ports:
+      - 27017:27017       
     volumes:
-    - ./data:/data/db
+      - ./data:/data/db
     restart: always
-  
